Use feature wrapper for projec section

--- a/index.html
+++ b/index.html
@@ -112,19 +112,32 @@
                 <h2 class="heading__title">Latest Projects</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure </p>
                 <h3 class="projects__project">Developing a framework</h3>
-                <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim<br>
-                    donec porttitora entum suscipit  aenean rhoncus posuere<br> 
+                <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim     donec porttitora entum suscipit  aenean rhoncus posuere<br> 
                     odio in tincidunt.</p>
-                <div class="project__features">
-                    <img src="img/projects/icon-basket.png" alt="">
-                    <h4 class="feature__header">E-Commerce Ready</h4>
-                    <p class="feature__description">Proin iaculis purus consequat sem cure  digni ssim. </p>
-                    <img src="img/projects/icon-laptop.png" alt="">
-                    <h4 class="feature__header">Powerful SEO Features</h4>
-                    <p class="feature__description">Proin iaculis purus consequat sem cure. </p>
-                    <img src="img/projects/icon-locked.png" alt="">
-                    <h4 class="feature__header">Secure Encryption</h4>
-                    <p class="feature__description">Proin iaculis purus consequat sem cure iaculis purus. </p>
+                <div class="l-features-wrapper">
+                    <div class="feature">
+                        <div class="feature__icon">
+                            <img src="img/projects/icon-basket.svg" alt="">
+                        </div>
+                        <h4 class="feature__title">E-Commerce Ready</h4>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure  digni ssim. </p>
+                    </div>
+                    <div class="feature">
+                        <div class="feature__icon">
+                            <div class="feature__icon-circle">
+                            <img src="img/projects/icon-laptop.svg" alt="">
+                            </div>
+                        </div>
+                        <h4 class="feature__title">Powerful SEO Features</h4>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure. </p>
+                    </div>
+                    <div class="feature">
+                        <div class="feature__icon">
+                            <img src="img/projects/icon-locked.svg" alt="">
+                        </div>
+                        <h4 class="feature__title">Secure Encryption</h4>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure iaculis purus. </p>
+                    </div>
                 </div>
                 <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim<br>
                     donec porttitora entum suscipit  aenean rhoncus posuere<br> 
