Style partners section

--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
         </section>
             
         <section class="l-section">
-            <div class="l-section__content-wrapper">
-                <a href="#" title="envato"><img src="img/partners/envato.png" alt="envato"></a>
-                <a href="#" title="WordPress"><img src="img/partners/wordpress.png" alt="WordPress"></a>
-                <a href="#" title="ae tuts+"><img src="img/partners/tuts.png" alt="ae tuts+"></a>
-                <a href="#" title="microlancer"><img src="img/partners/microlancer.png" alt="microlancer"></a>
+            <div class="l-section__content-wrapper partners">
+                <a href="#" title="envato"><img class="partners__logo" src="img/partners/envato.png" alt="envato"></a>
+                <a href="#" title="WordPress"><img class="partners__logo" src="img/partners/wordpress.png" alt="WordPress"></a>
+                <a href="#" title="ae tuts+"><img class="partners__logo" src="img/partners/tuts.png" alt="ae tuts+"></a>
+                <a href="#" title="microlancer"><img class="partners__logo" src="img/partners/microlancer.png" alt="microlancer"></a>
             </div>
         </section>
         </main>
