Style links section

--- a/index.html
+++ b/index.html
@@ -234,48 +234,48 @@
                     <div class="l-features-wrapper">
                     <div class="feature">
                         <h2 class="feature__title">Contact us</h2>
-                        <div class="contact__item">
-                            <img src="img/icons/location.png" alt="">
+                        <div class="feature__description">
+                            <img class="feature__icon"src="img/icons/location.svg" alt="">
                             <p>55 Main St.<br>
                                 Toronto, ON<br>
                                 M1H 3A5</p>
                         </div>
-                        <div class="contact__item">
-                            <img src="img/icons/iphone.png" alt="">
+                        <div class="feature__description">
+                            <img class="feature__icon" src="img/icons/iphone.svg" alt="">
                             <p>(416) 555-5252</p>
                         </div>
-                        <div class="contact__item">
-                            <img src="img/icons/email.png" alt="">
+                        <div class="feature__description">
+                            <img class="feature__icon" src="img/icons/email.svg" alt="">
                             <p>hello@treehouse.com</p>
                         </div>
                     </div>
                     <div class="feature">
                         <h2 class="feature__title">Latest posts</h2>
-                        <div class="posts__item">
-                            <img src="img/icons/news.png" alt="">
+                        <div class="feature__description">
+                            <img class="feature__icon" src="img/icons/news.svg" alt="">
                             <p>Made With Love In Toronto</p>
                         </div>
-                        <div class="posts__item">
-                            <img src="img/icons/photo.png" alt="">
+                        <div class="feature__description">
+                            <img class="feature__icon" src="img/icons/photo.svg" alt="">
                             <p>Startup News & Emerging Tech</p>
                         </div>
-                        <div class="posts__item">
-                            <img src="img/icons/news.png" alt="">
+                        <div class="feature__description">
+                            <img class="feature__icon" src="img/icons/news.svg" alt="">
                             <p>Bitcoin Will Soon Rule The World</p>
                         </div>
-                        <div class="posts__item">
-                            <img src="img/icons/news.png" alt="">
+                        <div class="feature__description">
+                            <img class="feature__icon" src="img/icons/news.svg" alt="">
                             <p>Wearable Technology On The Rise</p>
                         </div>
-                        <div class="posts__item">
-                            <img src="img/icons/media.png" alt="">
+                        <div class="feature__description">
+                            <img class="feature__icon" src="img/icons/media.svg" alt="">
                             <p>Learn Web Design In 30 Days!</p>
                         </div>
                     </div>
                     <div class="feature">
                         <h2 class="feature__title">Latest tweets</h2>
-                        <div class="tweets__item">
-                            <img src="img/icons/twitter.png" alt="">
+                        <div class="feature__description">
+                            <img src="img/icons/twitter.svg" alt="">
 
                         </div>
                     </div>
