Style links section

--- a/index.html
+++ b/index.html
@@ -235,48 +235,79 @@
                     <div class="feature">
                         <h2 class="feature__title">Contact us</h2>
                         <div class="feature__description">
-                            <img class="feature__icon"src="img/icons/location.svg" alt="">
+                            <div class="feature__icon" >
+                                <img src="img/icons/location.svg" alt="">
+                            </div>
                             <p>55 Main St.<br>
                                 Toronto, ON<br>
                                 M1H 3A5</p>
                         </div>
                         <div class="feature__description">
-                            <img class="feature__icon" src="img/icons/iphone.svg" alt="">
+                            <div class="feature__icon" >
+                                <img src="img/icons/iphone.svg" alt="">
+                            </div>
                             <p>(416) 555-5252</p>
                         </div>
                         <div class="feature__description">
-                            <img class="feature__icon" src="img/icons/email.svg" alt="">
+                            <div class="feature__icon" >
+                                <img src="img/icons/email.svg" alt="">
+                            </div>
                             <p>hello@treehouse.com</p>
                         </div>
                     </div>
                     <div class="feature">
                         <h2 class="feature__title">Latest posts</h2>
                         <div class="feature__description">
-                            <img class="feature__icon" src="img/icons/news.svg" alt="">
-                            <p>Made With Love In Toronto</p>
+                            <div class="feature__icon" >
+                                <img src="img/icons/news.svg" alt="">
+                            </div>
+                            <a href="#"><p>Made With Love In Toronto</p></a>
                         </div>
                         <div class="feature__description">
-                            <img class="feature__icon" src="img/icons/photo.svg" alt="">
-                            <p>Startup News & Emerging Tech</p>
+                            <div class="feature__icon" >
+                                <img src="img/icons/photo.svg" alt="">
+                            </div>
+                            <a href="#"><p>Startup News & Emerging Tech</p></a>
                         </div>
                         <div class="feature__description">
-                            <img class="feature__icon" src="img/icons/news.svg" alt="">
-                            <p>Bitcoin Will Soon Rule The World</p>
+                            <div class="feature__icon" >
+                                <img src="img/icons/news.svg" alt="">
+                            </div>
+                            <a href="#"><p>Bitcoin Will Soon Rule The World</p></a>
                         </div>
                         <div class="feature__description">
-                            <img class="feature__icon" src="img/icons/news.svg" alt="">
-                            <p>Wearable Technology On The Rise</p>
+                            <div class="feature__icon" >
+                                <img src="img/icons/news.svg" alt="">
+                            </div>
+                            <a href="#"><p>Wearable Technology On The Rise</p></a>
                         </div>
                         <div class="feature__description">
-                            <img class="feature__icon" src="img/icons/media.svg" alt="">
-                            <p>Learn Web Design In 30 Days!</p>
+                            <div class="feature__icon" >
+                                <img src="img/icons/media.svg" alt=""></div>
+                            <a href="#"><p>Learn Web Design In 30 Days!</p></a>
                         </div>
                     </div>
                     <div class="feature">
                         <h2 class="feature__title">Latest tweets</h2>
                         <div class="feature__description">
-                            <img src="img/icons/twitter.svg" alt="">
-
+                            <div class="feature__icon" >
+                                <img src="img/icons/twitter.svg" alt="">
+                            </div>
+                            <p><a href="#">Confucius: Life is really simple, 
+                                but we insist on making it 
+                                complicated. </a><br>
+                                <span class="feature__description--hashtag" >#famousquotes</span><br>
+                                <span class="feature__description--small" >8 mins ago</span>
+                            </p>
+                        </div>
+                        <div class="feature__description">
+                            <div class="feature__icon" >
+                                <img src="img/icons/twitter.svg" alt="">
+                            </div>
+                            <p><a href="#">Grab the Free Treehouse web template at FreebiesXpress! </a><br>
+                                <span class="feature__description--hashtag" >#freebies #templates</span><br>
+                                <span class="feature__description--small" >2 days ago</span>
+                            </p>
                         </div>
                     </div>
                     </div>
