Set icon to the top for the multiple line description

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <div class="feature">
                         <h2 class="feature__title">Contact us</h2>
                         <div class="feature__description">
-                            <div class="feature__icon" >
+                            <div class="feature__icon feature__icon--top" >
                                 <img src="img/icons/location.svg" alt="">
                             </div>
                             <p>55 Main St.<br>
@@ -290,7 +290,7 @@
                     <div class="feature">
                         <h2 class="feature__title">Latest tweets</h2>
                         <div class="feature__description">
-                            <div class="feature__icon" >
+                            <div class="feature__icon feature__icon--top" >
                                 <img src="img/icons/twitter.svg" alt="">
                             </div>
                             <p><a href="#">Confucius: Life is really simple, 
@@ -301,7 +301,7 @@
                             </p>
                         </div>
                         <div class="feature__description">
-                            <div class="feature__icon" >
+                            <div class="feature__icon feature__icon--top" >
                                 <img src="img/icons/twitter.svg" alt="">
                             </div>
                             <p><a href="#">Grab the Free Treehouse web template at FreebiesXpress! </a><br>
