Add alt to icons

--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
             
         <section class="l-section">
             <div class="l-section__content-wrapper partners">
-                <a href="#" title="envato"><img class="partners__logo" src="img/partners/envato.png" alt="envato"></a>
+                <a href="#" title="Envato"><img class="partners__logo" src="img/partners/envato.png" alt="Envato"></a>
                 <a href="#" title="WordPress"><img class="partners__logo" src="img/partners/wordpress.png" alt="WordPress"></a>
                 <a href="#" title="ae tuts+"><img class="partners__logo" src="img/partners/tuts.png" alt="ae tuts+"></a>
-                <a href="#" title="microlancer"><img class="partners__logo" src="img/partners/microlancer.png" alt="microlancer"></a>
+                <a href="#" title="Microlancer"><img class="partners__logo" src="img/partners/microlancer.png" alt="Microlancer"></a>
             </div>
         </section>
         </main>
@@ -236,7 +236,7 @@
                         <h2 class="feature__title">Contact us</h2>
                         <div class="feature__description">
                             <div class="feature__icon feature__icon--top" >
-                                <img src="img/icons/location.svg" alt="">
+                                <img src="img/icons/location.svg" alt="Address">
                             </div>
                             <p>55 Main St.<br>
                                 Toronto, ON<br>
@@ -244,13 +244,13 @@
                         </div>
                         <div class="feature__description">
                             <div class="feature__icon" >
-                                <img src="img/icons/iphone.svg" alt="">
+                                <img src="img/icons/iphone.svg" alt="Phone Number">
                             </div>
                             <p>(416) 555-5252</p>
                         </div>
                         <div class="feature__description">
                             <div class="feature__icon" >
-                                <img src="img/icons/email.svg" alt="">
+                                <img src="img/icons/email.svg" alt="Email Address">
                             </div>
                             <p>hello@treehouse.com</p>
                         </div>
@@ -259,31 +259,31 @@
                         <h2 class="feature__title">Latest posts</h2>
                         <div class="feature__description">
                             <div class="feature__icon" >
-                                <img src="img/icons/news.svg" alt="">
+                                <img src="img/icons/news.svg" alt="Read article">
                             </div>
                             <a href="#"><p>Made With Love In Toronto</p></a>
                         </div>
                         <div class="feature__description">
                             <div class="feature__icon" >
-                                <img src="img/icons/photo.svg" alt="">
+                                <img src="img/icons/photo.svg" alt="Read article">
                             </div>
                             <a href="#"><p>Startup News & Emerging Tech</p></a>
                         </div>
                         <div class="feature__description">
                             <div class="feature__icon" >
-                                <img src="img/icons/news.svg" alt="">
+                                <img src="img/icons/news.svg" alt="Read article">
                             </div>
                             <a href="#"><p>Bitcoin Will Soon Rule The World</p></a>
                         </div>
                         <div class="feature__description">
                             <div class="feature__icon" >
-                                <img src="img/icons/news.svg" alt="">
+                                <img src="img/icons/news.svg" alt="Read article">
                             </div>
                             <a href="#"><p>Wearable Technology On The Rise</p></a>
                         </div>
                         <div class="feature__description">
                             <div class="feature__icon" >
-                                <img src="img/icons/media.svg" alt=""></div>
+                                <img src="img/icons/media.svg" alt="Watch video"></div>
                             <a href="#"><p>Learn Web Design In 30 Days!</p></a>
                         </div>
                     </div>
@@ -291,7 +291,7 @@
                         <h2 class="feature__title">Latest tweets</h2>
                         <div class="feature__description">
                             <div class="feature__icon feature__icon--top" >
-                                <img src="img/icons/twitter.svg" alt="">
+                                <img src="img/icons/twitter.svg" alt="Tweet">
                             </div>
                             <p><a href="#">Confucius: Life is really simple, 
                                 but we insist on making it 
@@ -302,7 +302,7 @@
                         </div>
                         <div class="feature__description">
                             <div class="feature__icon feature__icon--top" >
-                                <img src="img/icons/twitter.svg" alt="">
+                                <img src="img/icons/twitter.svg" alt="Tweet">
                             </div>
                             <p><a href="#">Grab the Free Treehouse web template at FreebiesXpress! </a><br>
                                 <span class="feature__description--hashtag" >#freebies #templates</span><br>
