--- a/index.html
+++ b/index.html
@@ -316,10 +316,18 @@
             <section class="l-section">
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials__icons">
-                    <img src="img/socials/twitter.svg" alt="twitter">
-                    <img src="img/socials/facebook.svg" alt="facebook">
-                    <img src="img/socials/pinterest.svg" alt="pinterest">
-                    <img src="img/socials/google.svg" alt="google+">
+                    <div class="socials__icon">
+                        <img src="img/socials/Twitter.png" alt="twitter">
+                    </div>
+                    <div class="socials__icon">
+                        <img src="img/socials/facebook.png" alt="facebook">
+                    </div>
+                    <div class="socials__icon">
+                        <img src="img/socials/pinterest.png" alt="pinterest">
+                    </div>
+                    <div class="socials__icon">
+                        <img src="img/socials/google.png" alt="google+">
+                    </div>
                 </div>
             </section>
         </footer>
