--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials__icons">
                     <div class="socials__icon">
-                        <img src="img/socials/Twitter.png" alt="twitter">
+                        <img src="img/socials/twitter.png" alt="twitter">
                     </div>
                     <div class="socials__icon">
                         <img src="img/socials/facebook.png" alt="facebook">
