--- a/index.html
+++ b/index.html
@@ -316,18 +316,26 @@
             <section class="l-section">
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials__icons">
-                    <div class="socials__icon">
-                        <img src="img/socials/twitter.png" alt="twitter">
-                    </div>
-                    <div class="socials__icon">
-                        <img src="img/socials/facebook.png" alt="facebook">
-                    </div>
-                    <div class="socials__icon">
-                        <img src="img/socials/pinterest.png" alt="pinterest">
-                    </div>
-                    <div class="socials__icon">
-                        <img src="img/socials/google.png" alt="google+">
-                    </div>
+                    <a href="#">
+                        <div class="socials__icon socials__icon--twitter">
+                            <img src="img/socials/twitter.png" alt="twitter">
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="socials__icon socials__icon--facebook">
+                            <img src="img/socials/facebook.png" alt="facebook">
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="socials__icon socials__icon--pinterest">
+                            <img src="img/socials/pinterest.png" alt="pinterest">
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="socials__icon socials__icon--google">
+                            <img src="img/socials/google.png" alt="google+">
+                        </div>
+                    </a>
                 </div>
             </section>
         </footer>
