Style socials icon hover

--- a/index.html
+++ b/index.html
@@ -316,25 +316,17 @@
             <section class="l-section">
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials__icons">
-                    <a href="#">
-                        <div class="socials__icon socials__icon--twitter">
-                            <img src="img/socials/twitter.png" alt="twitter">
-                        </div>
+                    <a href="#" class="socials__icon socials__icon--twitter">
+                        <img src="img/socials/twitter.png" alt="twitter">
                     </a>
-                    <a href="#">
-                        <div class="socials__icon socials__icon--facebook">
-                            <img src="img/socials/facebook.png" alt="facebook">
-                        </div>
+                    <a href="#" class="socials__icon socials__icon--facebook">
+                        <img src="img/socials/facebook.png" alt="facebook">
                     </a>
-                    <a href="#">
-                        <div class="socials__icon socials__icon--pinterest">
-                            <img src="img/socials/pinterest.png" alt="pinterest">
-                        </div>
+                    <a href="#" class="socials__icon socials__icon--pinterest">
+                        <img src="img/socials/pinterest.png" alt="pinterest">
                     </a>
-                    <a href="#">
-                        <div class="socials__icon socials__icon--google">
-                            <img src="img/socials/google.png" alt="google+">
-                        </div>
+                    <a href="#" class="socials__icon socials__icon--google">
+                        <img src="img/socials/google.png" alt="google+">
                     </a>
                 </div>
             </section>
