Add small black circle around icons in projects section

--- a/index.html
+++ b/index.html
@@ -117,14 +117,16 @@
                 <div class="l-features-wrapper">
                     <div class="feature">
                         <div class="feature__icon">
+                            <div class="feature__icon-circle feature__icon-circle--black">
                             <img src="img/projects/icon-basket.svg" alt="">
+                            </div>
                         </div>
                         <h4 class="feature__title">E-Commerce Ready</h4>
                         <p class="feature__description">Proin iaculis purus consequat sem cure  digni ssim. </p>
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
-                            <div class="feature__icon-circle">
+                            <div class="feature__icon-circle feature__icon-circle--black">
                             <img src="img/projects/icon-laptop.svg" alt="">
                             </div>
                         </div>
@@ -133,7 +135,9 @@
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
+                            <div class="feature__icon-circle feature__icon-circle--black">
                             <img src="img/projects/icon-locked.svg" alt="">
+                            </div>
                         </div>
                         <h4 class="feature__title">Secure Encryption</h4>
                         <p class="feature__description">Proin iaculis purus consequat sem cure iaculis purus. </p>
