Add clients pictures

--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
                 <h2 class="heading__title">Our Awesome Clients</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure. </p>
                 <div class="opinion">
-                    <div class="opinion__picture"></div>
+                    <div class="opinion__picture-background">
+                        <img class="opinion__picture" src="img/opinions/client1.jpeg">
+                    </div>
                     <blockquote class="opinion__quotation">
                         <p class="opinion__text">Proin iaculis purus consequat sem cure  digni ssim
                         donec porttitora entum suscipit aenean rhoncus.</p>
@@ -206,7 +208,9 @@
                     </blockquote>
                 </div>
                 <div class="opinion">
-                    <div class="opinion__picture"></div>
+                    <div class="opinion__picture-background">
+                       <img class="opinion__picture" src="img/opinions/client2.jpeg">
+                    </div>
                     <blockquote class="opinion__quotation">
                     <p class="opinion__text">Proin iaculis purus consequat sem cure  digni ssim
                         donec porttitora entum suscipit aenean rhoncus.</p>
