Exchange green arrow from png to svg

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             <div class="l-section__content-wrapper">
                 <h2 class="heading__title">Latest Projects</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure </p>
-                <h3 class="projects__project">Developing a framework</h3>
-                <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim     donec porttitora entum suscipit  aenean rhoncus posuere<br> 
+                <h3 class="feature__title">Developing a framework</h3>
+                <p class="feature__description">Proin iaculis purus consequat sem cure  digni ssim     donec porttitora entum suscipit  aenean rhoncus posuere<br> 
                     odio in tincidunt.</p>
                 <div class="l-features-wrapper">
                     <div class="feature">
@@ -146,8 +146,8 @@
                 <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim<br>
                     donec porttitora entum suscipit  aenean rhoncus posuere<br> 
                     odio in tincidunt.</p>
-                <p class="project__link"><span class="green-text">View Details -> </span></p>
-                <img src="img/projects/Arrow-Right.png" alt="">
+                <p class="project__link"><span class="green-text">View Details</span>
+                <img src="img/projects/arrow.svg" alt=""></p>
             </div>
         </section>
             
