--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                 <h2 class="heading__title">Latest Projects</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure </p>
                 <h3 class="heading__title heading__title--subheading">Developing a framework</h3>
-                <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure  digni ssim     donec porttitora entum suscipit  aenean rhoncus posuere<br> 
-                    odio in tincidunt.</p>
+                <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                 <div class="l-features-wrapper">
                     <div class="feature">
                         <div class="feature__icon">
