Remove line breakers from description

--- a/index.html
+++ b/index.html
@@ -142,9 +142,7 @@
                         <p class="feature__description">Proin iaculis purus consequat sem cure iaculis purus. </p>
                     </div>
                 </div>
-                <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim<br>
-                    donec porttitora entum suscipit  aenean rhoncus posuere<br> 
-                    odio in tincidunt.</p>
+                <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                 <p class="project__link"><span class="green-text">View Details</span>
                 <img src="img/projects/arrow.svg" alt=""></p>
             </div>
@@ -162,9 +160,7 @@
                             </div>
                         </div>
                         <h3 class="feature__title">Work-life Balance</h3>
-                        <p class="feature__description">Proin iaculis purus consequat sem cure<br> 
-                            digni ssim. Donec porttitora entum suscipit <br>
-                            aenean rhoncus posuere odio in tincidunt.</p>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
@@ -173,9 +169,7 @@
                             </div>
                         </div>
                         <h3 class="feature__title">Quality Over Quantity</h3>
-                        <p class="feature__description">Proin iaculis purus consequat sem cure<br> 
-                            digni ssim. Donec porttitora entum suscipit <br>
-                            aenean rhoncus posuere odio in tincidunt.</p>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
@@ -184,9 +178,7 @@
                             </div>
                         </div>
                         <h3 class="feature__title">Deliver Excelence</h3>
-                        <p class="feature__description">Proin iaculis purus consequat sem cure <br>
-                            digni ssim. Donec porttitora entum suscipit <br>
-                            aenean rhoncus posuere odio in tincidunt.</p>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                 </div>
             </div>
