--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <p class="feature__description">Proin iaculis purus consequat sem cure iaculis purus. </p>
                     </div>
                 </div>
-                <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                 <p class="project__link"><span class="green-text">View Details</span>
                 <img src="img/projects/arrow.svg" alt=""></p>
             </div>
