Style project description

--- a/index.html
+++ b/index.html
@@ -111,40 +111,48 @@
             <div class="l-section__content-wrapper">
                 <h2 class="heading__title">Latest Projects</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure </p>
-                <h3 class="heading__title heading__title--subheading">Developing a framework</h3>
-                <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
-                <div class="l-features-wrapper">
-                    <div class="feature">
-                        <div class="feature__icon">
-                            <div class="feature__icon-circle feature__icon-circle--black">
-                            <img src="img/projects/icon-basket.svg" alt="">
+                <div class="project">
+                    <h3 class="heading__title heading__title--subheading">Developing a framework</h3>
+                    <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                    <div class="l-features-wrapper">
+                        <div class="feature feature--inline">
+                            <div class="feature__icon">
+                                <div class="feature__icon-circle feature__icon-circle--black">
+                                <img src="img/projects/icon-basket.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="feature__text">
+                                <h4 class="feature__title">E-Commerce Ready</h4>
+                                <p class="feature__description">Proin iaculis purus consequat sem cure  digni ssim. </p>
                             </div>
                         </div>
-                        <h4 class="feature__title">E-Commerce Ready</h4>
-                        <p class="feature__description">Proin iaculis purus consequat sem cure  digni ssim. </p>
-                    </div>
-                    <div class="feature">
-                        <div class="feature__icon">
-                            <div class="feature__icon-circle feature__icon-circle--black">
-                            <img src="img/projects/icon-laptop.svg" alt="">
+                        <div class="feature feature--inline">
+                            <div class="feature__icon">
+                                <div class="feature__icon-circle feature__icon-circle--black">
+                                <img src="img/projects/icon-laptop.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="feature__text">
+                                <h4 class="feature__title">Powerful SEO Features</h4>
+                                <p class="feature__description">Proin iaculis purus consequat sem cure. </p>
                             </div>
                         </div>
-                        <h4 class="feature__title">Powerful SEO Features</h4>
-                        <p class="feature__description">Proin iaculis purus consequat sem cure. </p>
-                    </div>
-                    <div class="feature">
-                        <div class="feature__icon">
-                            <div class="feature__icon-circle feature__icon-circle--black">
-                            <img src="img/projects/icon-locked.svg" alt="">
+                        <div class="feature feature--inline">
+                            <div class="feature__icon">
+                                <div class="feature__icon-circle feature__icon-circle--black">
+                                <img src="img/projects/icon-locked.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="feature__text">
+                                <h4 class="feature__title">Secure Encryption</h4>
+                                <p class="feature__description">Proin iaculis purus consequat sem cure iaculis purus. </p>
                             </div>
                         </div>
-                        <h4 class="feature__title">Secure Encryption</h4>
-                        <p class="feature__description">Proin iaculis purus consequat sem cure iaculis purus. </p>
                     </div>
+                    <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                    <p class="project__link"><span class="green-text">View Details</span>
+                    <img src="img/projects/arrow.svg" alt=""></p>
                 </div>
-                <p class="heading__subtitle heading__subtitle--subheading">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
-                <p class="project__link"><span class="green-text">View Details</span>
-                <img src="img/projects/arrow.svg" alt=""></p>
             </div>
         </section>
             
