Change animation for icons with big circles

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="feature">
                         <div class="feature__icon">
                             <div class="feature__icon-circle">
-                            <img src="img/values/icon-music.svg" alt="">
+                            <img class="feature__svg" src="img/values/icon-music.svg" alt="">
                             </div>
                         </div>
                         <h3 class="feature__title">Work-life Balance</h3>
@@ -173,7 +173,7 @@
                     <div class="feature">
                         <div class="feature__icon">
                             <div class="feature__icon-circle">
-                            <img src="img/values/icon-graph.svg" alt="">
+                            <img class="feature__svg" src="img/values/icon-graph.svg" alt="">
                             </div>
                         </div>
                         <h3 class="feature__title">Quality Over Quantity</h3>
@@ -182,7 +182,7 @@
                     <div class="feature">
                         <div class="feature__icon">
                             <div class="feature__icon-circle feature__icon-circle--last">
-                            <img src="img/values/icon-star.svg" alt="">
+                            <img class="feature__svg" src="img/values/icon-star.svg" alt="">
                             </div>
                         </div>
                         <h3 class="feature__title">Deliver Excelence</h3>
