--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="l-features-wrapper">
                 <div class="feature">
                     <div class="feature__icon">
-                        <img src="img/services/icon-heart.svg" alt="">
+                        <img class="feature__svg" src="img/services/icon-heart.svg" alt="">
                     </div>
                     <h3 class="feature__title">Beautiful Designs</h3>
                     <p class="feature__description">Proin iaculis purus consequat sem cure<br>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="feature">
                     <div class="feature__icon">
-                        <img src="img/services/icon-mobile.svg" alt="">
+                        <img class="feature__svg" src="img/services/icon-mobile.svg" alt="">
                     </div>
                     <h3 class="feature__title">Responsive Web</h3>
                     <p class="feature__description">Proin iaculis purus consequat sem cure<br>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="feature">
                     <div class="feature__icon">
-                        <img src="img/services/icon-graph.svg" alt="">
+                        <img class="feature__svg" src="img/services/icon-graph.svg" alt="">
                     </div>
                     <h3 class="feature__title">Marketing Tools</h3>
                     <p class="feature__description">Proin iaculis purus consequat sem cure<br>
